--- a/fe/pugpunshop/package.json
+++ b/fe/pugpunshop/package.json
@@ -36,5 +36,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "css-loader": "^6.9.1",
+    "sass-loader": "^14.0.0",
+    "style-loader": "^3.3.4"
   }
 }
